@@ -1,40 +1,30 @@
 package com.whale.web.design.colorspalette.service;
 
+import com.whale.web.exceptions.domain.WhaleInvalidImageException;
+import com.whale.web.exceptions.domain.WhaleIOException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-
 import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.io.IOException;
 import java.util.HashMap;
+import java.util.*;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-/*
- * Class to create a list of colors in hexadecimal based on an image.
- * To do this, the code is based on the predominance of each color.
- * We can determine the number of colors we want in the list. For example: take the
- * 3 most frequent colors.
- * We still need to optimize this code. Depending on the configured distance between colors,
- * can result in a color palette that clashes with our perception of the image
- */
 
 @Service
 public class CreateColorsPaletteService {
 
-    public List<Color> createColorPalette(MultipartFile multipartFile) throws Exception {
+    private static final int NUM_COLORS = 6; // Number of predominant colors to be extracted
+    private static final int MAX_COLOR_DISTANCE = 70; // Maximum allowed distance between colors
 
-
-        int numColors = 6; // Number of predominant colors to be extracted
-        int maxColorDistance = 70; // Maximum allowed distance between colors
-
+    public List<Color> createColorPalette(MultipartFile multipartFile) throws WhaleInvalidImageException, WhaleIOException {
+        isValidImageFormat(multipartFile);
         try {
             BufferedImage image = ImageIO.read(multipartFile.getInputStream());
             int width = image.getWidth();
             int height = image.getHeight();
 
-            // Color count
             Map<Integer, Integer> colorCount = new HashMap<>();
 
             // Iterate through all pixels of the image
@@ -45,19 +35,15 @@ public class CreateColorsPaletteService {
 
                     // Consider only fully opaque pixels
                     if (alpha == 255) {
-                        int red = (rgb >> 16) & 0xFF;
-                        int green = (rgb >> 8) & 0xFF;
-                        int blue = rgb & 0xFF;
-                        int pixel = (red << 16) | (green << 8) | blue;
+                        int pixel = rgb & 0xFFFFFF;
 
                         // Check distance to existing colors in the palette
                         boolean isDuplicate = colorCount.keySet().stream()
-                                .anyMatch(existingColor -> getColorDistance(existingColor, pixel) <= maxColorDistance);
+                                .anyMatch(existingColor -> getColorDistance(existingColor, pixel) <= MAX_COLOR_DISTANCE);
 
                         if (!isDuplicate) {
                             // Increment the color count
-                            int count = colorCount.getOrDefault(pixel, 0);
-                            colorCount.put(pixel, count + 1);
+                            colorCount.merge(pixel, 1, Integer::sum);
                         }
                     }
                 }
@@ -66,12 +52,14 @@ public class CreateColorsPaletteService {
             // Sort the colors by count in descending order
             return colorCount.entrySet().stream()
                     .sorted(Map.Entry.<Integer, Integer>comparingByValue().reversed())
-                    .limit(numColors)
-                    .map(entry -> new Color(entry.getKey()))
-                    .collect(Collectors.toList());
+                    .limit(NUM_COLORS)
+                    .map(entry -> new Color(entry.getKey(), true))
+                    .toList();
 
-        } catch (Exception e) {
-            throw new Exception();
+        } catch (NullPointerException e) {
+            throw new WhaleInvalidImageException("This file is not a valid image");
+        } catch (IOException ioe) {
+            throw new WhaleIOException("Failed to created colors pallete from image");
         }
     }
 
@@ -80,5 +68,26 @@ public class CreateColorsPaletteService {
         int gDiff = (color1 >> 8 & 0xFF) - (color2 >> 8 & 0xFF);
         int bDiff = (color1 & 0xFF) - (color2 & 0xFF);
         return Math.sqrt((rDiff * rDiff) + (gDiff * gDiff) + (bDiff * bDiff));
+    }
+
+    private void isValidImageFormat(MultipartFile imageFile) throws WhaleInvalidImageException {
+        if (imageFile == null || imageFile.isEmpty()) {
+            throw new WhaleInvalidImageException("Image cannot be null or empty");
+        }
+
+        if (!Arrays.asList("bmp", "jpg", "jpeg", "gif", "png").contains(getFileExtension(imageFile))) {
+            throw new WhaleInvalidImageException("Please choose a valid image format: bmp, jpg, jpeg, png or gif file.");
+        }
+    }
+
+    private String getFileExtension(MultipartFile file) {
+        String fileName = file.getOriginalFilename();
+        if (fileName != null) {
+            int lastIndex = fileName.lastIndexOf('.');
+            if (lastIndex >= 0) {
+                return fileName.substring(lastIndex + 1).toLowerCase();
+            }
+        }
+        return null;
     }
 }
